@@ -1,3 +1,7 @@
+2004-04-28 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b68
+
+	* Change: More beatification in resize_photo.php
+
 2004-04-28 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b67
 
 	* Change: Forgot some $GALLERY_BASEDIR. Now its complete free.
